WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71108
Autogenerate Exception-downcast code in bindings
https://bugs.webkit.org/show_bug.cgi?id=71108
Summary
Autogenerate Exception-downcast code in bindings
Adam Barth
Reported
2011-10-28 04:13:05 PDT
Autogenerate Exception-downcast code in bindings
Attachments
Patch
(31.80 KB, patch)
2011-10-28 04:17 PDT
,
Adam Barth
eric
: review+
abarth
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-10-28 04:17:27 PDT
Created
attachment 112846
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-10-28 12:35:16 PDT
Comment on
attachment 112846
[details]
Patch Very nice.
Adam Barth
Comment 3
2011-10-28 13:20:56 PDT
Committed
r98755
: <
http://trac.webkit.org/changeset/98755
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug