Source/WebCore/WebCore.gypi
@@ -7081,6 +7081,8 @@
             '<(PRODUCT_DIR)/DerivedSources/WebCore/EventTargetInterfaces.h',
             '<(PRODUCT_DIR)/DerivedSources/WebCore/ExceptionCodeDescription.cpp',
             '<(PRODUCT_DIR)/DerivedSources/WebCore/ExceptionCodeDescription.h',
+            '<(PRODUCT_DIR)/DerivedSources/WebCore/ExceptionHeaders.h',
+            '<(PRODUCT_DIR)/DerivedSources/WebCore/ExceptionInterfaces.h',
             '<(PRODUCT_DIR)/DerivedSources/WebCore/HTMLElementFactory.cpp',
             '<(PRODUCT_DIR)/DerivedSources/WebCore/HTMLElementFactory.h',
             '<(PRODUCT_DIR)/DerivedSources/WebCore/HTMLEntityTable.cpp',
